--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "modulo02",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2",
-    "sucrase": "^3.13.0"
-  }
+	"name": "modulo02",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"scripts": {
+		"dev": "nodemon src/server.js",
+		"dev:debug": "nodemon --inspect src/server.js"
+	},
+	"dependencies": {
+		"express": "^4.17.1"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.2",
+		"sucrase": "^3.13.0"
+	}
 }
