--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
 		"dev:debug": "nodemon --inspect src/server.js"
 	},
 	"dependencies": {
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"pg": "^8.0.2",
+		"pg-hstore": "^2.3.3",
+		"postgres": "^1.0.2",
+		"sequelize": "^5.21.6"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.2",
+		"sequelize-cli": "^5.5.1",
 		"sucrase": "^3.13.0"
 	}
 }
