--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"pg": "^8.0.2",
 		"pg-hstore": "^2.3.3",
 		"postgres": "^1.0.2",
