--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"pg": "^8.0.2",
 		"pg-hstore": "^2.3.3",
 		"postgres": "^1.0.2",
-		"sequelize": "^5.21.6"
+		"sequelize": "^5.21.6",
+		"yup": "^0.28.3"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.2",
